Updated cheatsheet. Fixes #672

--- a/cheatsheet/index.html
+++ b/cheatsheet/index.html
@@ -83,25 +83,38 @@
 				<h2>Mathematical</h2>
 				<code>abs</code>
 				<code>sign</code>
+				<code>sin</code>
+				<code>cos</code>
+				<code>tan</code>
 				<code>acos</code>
 				<code>asin</code>
 				<code>atan</code>
 				<code>atan2</code>
-				<code>sin</code>
-				<code>cos</code>
 				<code>floor</code>
 				<code>round</code>
 				<code>ceil</code>
 				<code>ln</code>
 				<code>len</code>
 				<code>log</code>
-				<code>lookup</code>
-				<code>min</code>
-				<code>max</code>
 				<code>pow</code>
 				<code>sqrt</code>
 				<code>exp</code>
 				<code>rands</code>
+				<code>min</code>
+				<code>max</code>
+			</article>
+		</section>
+		<section>
+			<article>
+				<h2>Functions</h2>
+				<code>lookup</code>
+				<code>str</code>
+				<code>search</code>
+				<code>version</code>
+				<code>version_num</code>
+				<code>norm</code>
+				<code>cross</code>
+				<code>parent_module(idx)</code>
 			</article>
 		</section>
 		
@@ -109,7 +122,6 @@
 			<article>
 				<h2>Other</h2>
 				<code>echo(&hellip;)</code>
-				<code>str(&hellip;)</code>
 				<code>for (i = [<span>start</span>:<span>end</span>]) { &hellip; }</code>
 				<code>for (i = [<span>start</span>:<span>step</span>:<span>end</span>]) { &hellip; }</code>
 				<code>for (i = [&hellip;,&hellip;,&hellip;]) { &hellip; }</code>
@@ -118,7 +130,6 @@
 				<code>intersection_for(i = [&hellip;,&hellip;,&hellip;]) { &hellip; }</code>
 				<code>if (&hellip;) { &hellip; }</code>
 				<code>assign (&hellip;) { &hellip; }</code>
-				<code>search(&hellip;)</code>
 				<code>import("&hellip;.stl")</code>
 				<code>linear_extrude(height,center,convexity,twist,slices)</code>
 				<code>rotate_extrude(convexity)</code>
@@ -126,7 +137,6 @@
 				<code>projection(cut)</code>
 				<code>render(convexity)</code>
 				<code>children([idx])</code>
-				<code>parent_module(idx)</code>
 			</article>
 			<article>
 				<h2>Special variables</h2>
@@ -152,11 +162,6 @@
 					<li><a href="http://fablabamersfoort.nl/book/openscad" target="_blank">Other links</a></li>
 				</ul>
 			</article>			
-		  <article class="info">
-				<h2>Examples</h2>
-				<code>cylinder(10,5,5);</code>
-				<code>cylinder(h=10,r=5);</code>
-			</article>	
 		</section>		
 			
 		<footer><a href="https://github.com/openscad/OpenSCAD-CheatSheet" target="_blank">Code</a> / <a href="https://github.com/openscad/OpenSCAD-CheatSheet/issues" target="_blank">Issues</a><br/>
