add openbsd section

--- a/downloads.html
+++ b/downloads.html
@@ -229,6 +229,13 @@
 					<code># pkgin install openscad</code>
 				</pre>
 			</div>
+	<div id="openbsd" class="subsection">
+				<h2>OpenBSD</h2>
+				<p>OpenSCAD is available for amd64, i386 and macppc in OpenBSD packages:</p>
+				<pre>
+					<code># pkg_add openscad</code>
+				</pre>
+			</div>
 		</section>
 
 		<section id="other-systems">
