greater than s/b greater than or equal

--- a/downloads.html
+++ b/downloads.html
@@ -227,14 +227,14 @@
 		<section id="bsd">
 			<h1>BSD</h1>
 			<div id="netbsd" class="subsection">
-				<h2>NetBSD (>6.1)</h2>
+				<h2>NetBSD (>=6.1)</h2>
 				<p><a href="http://pkgin.net/">Set up pkgin</a> and run this command:</p>
 				<pre>
 					<code># pkgin install openscad</code>
 				</pre>
 			</div>
 			<div id="openbsd" class="subsection">
-				<h2>FreeBSD (>10)</h2>
+				<h2>FreeBSD (>=10)</h2>
 				<pre>
 					<code># pkg install openscad</code>
 				</pre>
