Fixed broken links. Fixes #14

--- a/cheatsheet/index.html
+++ b/cheatsheet/index.html
@@ -164,7 +164,7 @@
 			</article>			
 		</section>		
 			
-		<footer><a href="https://github.com/openscad/OpenSCAD-CheatSheet" target="_blank">Code</a> / <a href="https://github.com/openscad/OpenSCAD-CheatSheet/issues" target="_blank">Issues</a><br/>
+		<footer><a href="https://github.com/openscad/openscad" target="_blank">Code</a> / <a href="https://github.com/openscad/openscad/issues" target="_blank">Issues</a><br/>
 		By <a href="http://www.peteruithoven.nl" target="_blank">Peter Uithoven</a> @ <a href="http://www.fablabamersfoort.nl" target="_blank">Fablab Amersfoort</a> (<a href="http://freedomdefined.org/Licenses/CC-BY" target="_blank">CC-BY</a>)</footer>
 	</section>
 </body>
