Minor doc fix. Fixes #15

--- a/cheatsheet/index.html
+++ b/cheatsheet/index.html
@@ -36,7 +36,7 @@
 				<h2>3D</h2>
 				<code>sphere(radius | d=diameter)</code>
 				<code>cube(size)</code>
-				<code>cube([width,height,depth])</code>
+				<code>cube([width,depth,height])</code>
 				<code>cylinder(h,r|d,center)</code>
 				<code>cylinder(h,r1|d1,r2|d2,center)</code>
 				<code>polyhedron(points, triangles, convexity)</code>
