Mac binaries are now 64-bit only

--- a/downloads.html
+++ b/downloads.html
@@ -124,11 +124,11 @@
 		<section id="osx">
 			<h1>Mac OS X</h1>
 			<div class="subsection">
-				<p>System requirements: Mac OS X 10.6 or newer</p>
+				<p>System requirements: Mac OS X 10.7 or newer</p>
 				<a id="MAC_RELEASE_URL" href="http://files.openscad.org">
 				<button class="download-button">
 					<h3 id="MAC_RELEASE_NAME">OpenSCAD</h3>
-					<small>32/64 bit Intel - dmg package - </small><small id="MAC_RELEASE_SIZE">?? MB</small>
+					<small>64 bit Intel - dmg package - </small><small id="MAC_RELEASE_SIZE">?? MB</small>
 				</button>
 				</a>
 			</div>
