--- a/news.html
+++ b/news.html
@@ -169,6 +169,7 @@
                     <p><img class="newsimg" src="images/GoogleSummerOfCode-2014.png"/>
 		    OpenSCAD, in collaboration with <a href="http://brlcad.org/wiki/Google_Summer_of_Code/Project_Ideas">BRL-CAD</a>, has been accepted to <a href="https://www.google-melange.com/gsoc/homepage/google/gsoc2014">Google Summer of Code 2014</a>!</p>
                     <p>Project suggestions have been posted to <a href="https://github.com/openscad/openscad/wiki/Ideas:-GSoC-2014">the wiki</a>. If you're interested in participating, please get in touch on the <a href="http://openscad.org/community.html#mailing-list">mailing list</a> or <a href="http://openscad.org/community.html#irc">IRC</a> to discuss details and to help you get your feet wet. We're also open to new ideas.</p>
+                    <p>If you're interested, please familiarize yourself with the <a href="http://brlcad.org/wiki/Google_Summer_of_Code/Project_Ideas">requirements and application process</a>.</p>
 		    <p><small>Logo (c) Google CC-BY-NC-ND 3.0</small></p>
 		    <br clear="all"/>
                     <p>Suggested projects include:</p>
