link to old releases after several requests from OSX Mavericks users who cant run 2014.03

--- a/downloads.html
+++ b/downloads.html
@@ -117,6 +117,7 @@
 			<li><a href="#other-systems">Other Systems</a></li>
 			<li><a href="#source-code">Source Code</a></li>
 			<li><a href="#snapshots">Development Snapshots</a></li>
+			<li><a href="#priorreleases">Prior Releases</a></li>
 		</ul>
 	</div>
 	
@@ -332,6 +333,14 @@
 
 		</section>
 		
+
+		<section id="priorreleases">
+			<h1>Prior Releases</h1>
+
+			<p>Prior releases are available at <a href="http://files.openscad.org">files.openscad.org</a></p>
+		</section>
+
+
 </article>
 
 <div class="clear"></div>
