rearrange windows d/l links for Test Suite downloads

--- a/downloads.html
+++ b/downloads.html
@@ -283,6 +283,7 @@
 
 			<div id="snapshots-windows" class="subsection">
 				<h2>Windows</h2>
+
 				<a id="WIN32_SNAPSHOT1_URL" href="http://files.openscad.org">
 				<button class="left, download-button">
 					<h3 id="WIN32_SNAPSHOT1_NAME">OpenSCAD</h3>
@@ -290,19 +291,27 @@
 				</button>
 				</a>
 
-				<a id="WIN64_SNAPSHOT1_URL" href="http://files.openscad.org">
-				<button class="left, download-button">
-					<h3 id="WIN64_SNAPSHOT1_NAME">OpenSCAD</h3>
-					<small>x86 (64-bit) exe installer - </small><small id="WIN64_SNAPSHOT1_SIZE">?? MB</small>
-				</button>
-
-				<br clear="both"/>
 				<a id="WIN32_SNAPSHOT2_URL" href="http://files.openscad.org">
 				<button class="download-button">
 					<h3 id="WIN32_SNAPSHOT2_NAME">OpenSCAD</h3>
 					<small>x86 (32-bit) zip package - </small><small id="WIN32_SNAPSHOT2_SIZE">?? MB</small>
 				</button>
 				</a>
+
+				<a id="WIN32_SNAPSHOT3_URL" href="http://files.openscad.org">
+				<button class="download-button">
+					<h3 id="WIN32_SNAPSHOT3_NAME">OpenSCAD</h3>
+					<small>x86 (32-bit) test suite - </small><small id="WIN32_SNAPSHOT3_SIZE">?? MB</small>
+				</button>
+				</a>
+
+				<br clear="both"/>
+
+				<a id="WIN64_SNAPSHOT1_URL" href="http://files.openscad.org">
+				<button class="left, download-button">
+					<h3 id="WIN64_SNAPSHOT1_NAME">OpenSCAD</h3>
+					<small>x86 (64-bit) exe installer - </small><small id="WIN64_SNAPSHOT1_SIZE">?? MB</small>
+				</button>
 
 				</a>
 				<a id="WIN64_SNAPSHOT2_URL" href="http://files.openscad.org">
@@ -311,6 +320,14 @@
 					<small>x86 (64-bit) zip package - </small><small id="WIN64_SNAPSHOT2_SIZE">?? MB</small>
 				</button>
 				</a>
+
+				<a id="WIN64_SNAPSHOT3_URL" href="http://files.openscad.org">
+				<button class="download-button">
+					<h3 id="WIN64_SNAPSHOT3_NAME">OpenSCAD</h3>
+					<small>x86 (64-bit) test suite - </small><small id="WIN64_SNAPSHOT3_SIZE">?? MB</small>
+				</button>
+				</a>
+
 			</div>
 
 			<div id="snapshots-linux" class="subsection">
