rearrange windows links, add windows test suite links

--- a/downloads.html
+++ b/downloads.html
@@ -143,24 +143,24 @@
 
 		<section id="windows">
 			<h1>Windows</h1>
-			<p>System requirements: Windows XP or newer on x86/x64</p>
+			<p>System requirements: Windows XP or newer on x86 32/64 bit</p>
 			<a id="WIN32_RELEASE1_URL" href="http://files.openscad.org/files">
 			<button class="left, download-button">
 			  <h3 id="WIN32_RELEASE1_NAME">OpenSCAD</h3>
 			  <small>x86 (32-bit) exe installer - </small><small id="WIN32_RELEASE1_SIZE">?? MB</small>
 			</button>
 			</a>
-			<a id="WIN64_RELEASE1_URL" href="http://files.openscad.org">
-			<button class="left, download-button">
-			  <h3 id="WIN64_RELEASE1_NAME">OpenSCAD</h3>
-			  <small>x86 (64-bit) exe installer - </small><small id="WIN64_RELEASE1_SIZE">?? MB</small>
-			</button>
-			</a>
-			<br clear="both"/>
 			<a id="WIN32_RELEASE2_URL" href="http://files.openscad.org">
 			<button class="download-button">
 			  <h3 id="WIN32_RELEASE2_NAME">OpenSCAD</h3>
 			  <small>x86 (32-bit) zip package - </small><small id="WIN32_RELEASE2_SIZE">?? MB</small>
+			</button>
+			</a>
+			<br clear="both"/>
+			<a id="WIN64_RELEASE1_URL" href="http://files.openscad.org">
+			<button class="left, download-button">
+			  <h3 id="WIN64_RELEASE1_NAME">OpenSCAD</h3>
+			  <small>x86 (64-bit) exe installer - </small><small id="WIN64_RELEASE1_SIZE">?? MB</small>
 			</button>
 			</a>
 			<a id="WIN64_RELEASE2_URL" href="http://files.openscad.org">
