--- a/downloads.html
+++ b/downloads.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
-
 <html lang="en">
+	<!--[if lt IE 9]>
+	Your web browser is too old to be compatible with our download page. Please
+	visit <a href="http://files.openscad.org">http://files.openscad.org</a> 
+	directly to download the file you wish to use. Thanks.
+	<![endif]-->
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>OpenSCAD - Downloads</title>
