Fedora openscad-devel is now nighlty

--- a/downloads.html
+++ b/downloads.html
@@ -349,7 +349,7 @@
 				</button>
 				</a>
 				<h3>Fedora</h3>
-				<p>There is a repository with OpenSCAD development snapshots on <a href="http://copr.fedoraproject.org/coprs/churchyard/openscad-devel/">copr.fedoraproject.org</a>.</p>
+				<p>There is a RPM repository with nightly OpenSCAD development snapshots on <a href="http://copr.fedoraproject.org/coprs/churchyard/openscad-devel/">copr.fedoraproject.org</a>.</p>
 			</div>
 
 		</section>
