Mac packages are 64-bit only

--- a/downloads.html
+++ b/downloads.html
@@ -280,7 +280,7 @@
 				<a id="MAC_SNAPSHOT_URL" href="http://files.openscad.org">
 				<button class="download-button">
 					<h3 id="MAC_SNAPSHOT_NAME">OpenSCAD</h3>
-					<small>32/64 bit Intel - dmg package - </small><small id="MAC_SNAPSHOT_SIZE">?? MB</small>
+					<small>64 bit Intel - dmg package - </small><small id="MAC_SNAPSHOT_SIZE">?? MB</small>
 				</button>
 				</a>
 			</div>
