Add chr() function.

--- a/cheatsheet/index.html
+++ b/cheatsheet/index.html
@@ -109,6 +109,7 @@
 				<h2>Functions</h2>
 				<code>lookup</code>
 				<code>str</code>
+				<code>chr</code>
 				<code>search</code>
 				<code>version</code>
 				<code>version_num</code>
