Remove reference to Ubuntu PPA which only has a very old version.

--- a/downloads.html
+++ b/downloads.html
@@ -178,15 +178,9 @@
 		<section id="linux">
 			<h1>Linux</h1>
 			<div id="ubuntu" class="subsection">
-				<h2>Ubuntu / Kubuntu</h2>
+				<h2>Debian / Ubuntu / Kubuntu</h2>
 				<p>OpenSCAD is available in the repositories.
 				<pre>
-					<code>$ sudo apt-get install openscad</code>
-				</pre>
-				<p>There is a PPA (private package archive) for more recent versions of OpenSCAD that is maintained by <a href="https://launchpad.net/~chrysn" target="_blank">chrysn</a>. To install, run the following commands:</p>
-				<pre>
-					<code>$ sudo add-apt-repository ppa:chrysn/openscad</code>
-					<code>$ sudo apt-get update</code>
 					<code>$ sudo apt-get install openscad</code>
 				</pre>
 			</div>
