--- a/cheatsheet/index.html
+++ b/cheatsheet/index.html
@@ -159,7 +159,7 @@
 				<ul>
 					<li><a href="http://www.openscad.org/" target="_blank">Official website</a></li>
 					<li><a href="http://en.wikibooks.org/wiki/OpenSCAD_User_Manual" target="_blank">Manual</a></li>
-					<li><a href="https://github.com/elmom/MCAD" target="_blank">MCAD library</a></li>
+					<li><a href="https://github.com/openscad/MCAD" target="_blank">MCAD library</a></li>
 					<li><a href="http://fablabamersfoort.nl/book/openscad" target="_blank">Other links</a></li>
 				</ul>
 			</article>			
