cheatsheet: add program version to header

--- a/cheatsheet/index.html
+++ b/cheatsheet/index.html
@@ -11,8 +11,11 @@
 	<title>OpenSCAD CheatSheet</title>
 </head>
 <body>
+	<header>
+		<h1>OpenSCAD CheatSheet</h1>
+		<h2>v2014.06</h2>
+	</header>
 	<section>
-  	<h1>OpenSCAD CheatSheet</h1>
 		<section>
 			<article>
 				<h2>Syntax</h2>
