cheatsheet: move GitHub links from footer to Links section

--- a/cheatsheet/index.html
+++ b/cheatsheet/index.html
@@ -161,6 +161,7 @@
 				<h2>Links</h2>
 				<ul>
 					<li><a href="http://www.openscad.org/" target="_blank">Official website</a></li>
+					<li><a href="https://github.com/openscad/openscad" target="_blank">Code</a> | <a href="https://github.com/openscad/openscad/issues" target="_blank">Issues</a></li>
 					<li><a href="http://en.wikibooks.org/wiki/OpenSCAD_User_Manual" target="_blank">Manual</a></li>
 					<li><a href="https://github.com/elmom/MCAD" target="_blank">MCAD library</a></li>
 					<li><a href="http://fablabamersfoort.nl/book/openscad" target="_blank">Other links</a></li>
@@ -169,7 +170,7 @@
 		</section>		
 	</section>		
 			
-		<footer><a href="https://github.com/openscad/openscad" target="_blank">Code</a> / <a href="https://github.com/openscad/openscad/issues" target="_blank">Issues</a><br/>
+		<footer>
 		By <a href="http://www.peteruithoven.nl" target="_blank">Peter Uithoven</a> @ <a href="http://www.fablabamersfoort.nl" target="_blank">Fablab Amersfoort</a> (<a href="http://freedomdefined.org/Licenses/CC-BY" target="_blank">CC-BY</a>)</footer>
 </body>
 </html>
