--- a/cheatsheet/index.html
+++ b/cheatsheet/index.html
@@ -171,6 +171,7 @@
 	</section>		
 			
 		<footer>
+			<a href="https://github.com/openscad/openscad.github.com/tree/master/cheatsheet" target="_blank">Edit me on GitHub!</a><br/>
 		By <a href="http://www.peteruithoven.nl" target="_blank">Peter Uithoven</a> @ <a href="http://www.fablabamersfoort.nl" target="_blank">Fablab Amersfoort</a> (<a href="http://freedomdefined.org/Licenses/CC-BY" target="_blank">CC-BY</a>)</footer>
 </body>
 </html>
