cheatsheet: clean up whitespace and indentation

--- a/cheatsheet/index.html
+++ b/cheatsheet/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=no;"/>
-	<meta charset="UTF-8"> 
+	<meta charset="UTF-8">
 	<link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
 	<link type="text/css" rel="stylesheet" href="css/normalize.css" media="all" />
 	<link type="text/css" rel="stylesheet" href="css/fonts.css" media="all" />
@@ -45,7 +45,7 @@
 				<code>polyhedron(points, triangles, convexity)</code>
 			</article>
 		</section>
-		
+
 		<section>
 			<article>
 				<h2>Transformations</h2>
@@ -80,7 +80,7 @@
 				</dl>
 			</article>
 		</section>
-		
+
 		<section>
 			<article>
 				<h2>Mathematical</h2>
@@ -107,6 +107,7 @@
 				<code>max</code>
 			</article>
 		</section>
+
 		<section>
 			<article>
 				<h2>Functions</h2>
@@ -121,7 +122,7 @@
 				<code>parent_module(idx)</code>
 			</article>
 		</section>
-		
+
 		<section>
 			<article>
 				<h2>Other</h2>
@@ -166,12 +167,13 @@
 					<li><a href="https://github.com/elmom/MCAD" target="_blank">MCAD library</a></li>
 					<li><a href="http://fablabamersfoort.nl/book/openscad" target="_blank">Other links</a></li>
 				</ul>
-			</article>			
-		</section>		
-	</section>		
-			
+			</article>
+		</section>
+	</section>
+
 		<footer>
 			<a href="https://github.com/openscad/openscad.github.com/tree/master/cheatsheet" target="_blank">Edit me on GitHub!</a><br/>
-		By <a href="http://www.peteruithoven.nl" target="_blank">Peter Uithoven</a> @ <a href="http://www.fablabamersfoort.nl" target="_blank">Fablab Amersfoort</a> (<a href="http://freedomdefined.org/Licenses/CC-BY" target="_blank">CC-BY</a>)</footer>
+			By <a href="http://www.peteruithoven.nl" target="_blank">Peter Uithoven</a> @ <a href="http://www.fablabamersfoort.nl" target="_blank">Fablab Amersfoort</a> (<a href="http://freedomdefined.org/Licenses/CC-BY" target="_blank">CC-BY</a>)
+		</footer>
 </body>
 </html>
