Added forum link and $children variable

--- a/cheatsheet/index.html
+++ b/cheatsheet/index.html
@@ -172,6 +172,8 @@
 					<dd>viewport translation</dd>
                                         <dt><code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Other_Language_Features#.24vpr.2C_.24vpt_and_.24vpd">$vpd</a></code></dt>
 					<dd>viewport camera distance</dd>
+                                        <dt><code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Modules#children">$children</a></code></dt>
+                                        <dd>&nbsp;number of module children</dd>
 				</dl>
 			</article>
 		</section>
@@ -186,6 +188,7 @@
                                         | <a href="https://github.com/openscad/openscad/issues" target="_blank">Issues</a>
 					| <a href="http://en.wikibooks.org/wiki/OpenSCAD_User_Manual" target="_blank">Manual</a>
 					| <a href="https://github.com/openscad/MCAD" target="_blank">MCAD library</a>
+                    | <a href="http://forum.openscad.org" target="_blank">Forum</a>
 					| <a href="http://fablabamersfoort.nl/book/openscad" target="_blank">Other links</a>
 			</article>
 		</section>
