Migrated mailing list to openscad.org

--- a/community.html
+++ b/community.html
@@ -123,9 +123,9 @@
 	
 		<section id="mailing-list">
 		  <h1>Mailing List<small>
-                      <a href="http://rocklinux.net/mailman/listinfo/openscad">list info</a>
-                      <a href="http://rocklinux.net/pipermail/openscad">archives</a></small></h1>
-		  <form action="http://rocklinux.net/mailman/subscribe/openscad" method="POST" target="_blank">E-mail: <input name="email" /><input type="submit" value="Sign Me Up!" />
+                      <a href="http://lists.openscad.org/mailman/listinfo/discuss_lists.openscad.org">list info</a>
+                      <a href="http://lists.openscad.org/pipermail/discuss_lists.openscad.org/">archives</a></small></h1>
+		  <form action="http://lists.openscad.org/mailman/subscribe/discuss_lists.openscad.org" method="POST" target="_blank">E-mail: <input name="email" /><input type="submit" value="Sign Me Up!" />
                   </form>
                   <br/>Note: The mailing list and <a href="#forum">forums</a> are bidirectionally connected.
 		</section>
