Add reference to the new PPA for Ubuntu 14.04 LTS.

--- a/downloads.html
+++ b/downloads.html
@@ -179,9 +179,15 @@
 			<h1>Linux</h1>
 			<div id="ubuntu" class="subsection">
 				<h2>Debian / Ubuntu / Kubuntu</h2>
-				<p>OpenSCAD is available in the repositories.
+				<p>OpenSCAD is available in the repositories of recent distributions.
 				<pre>
 					<code>$ sudo apt-get install openscad</code>
+				</pre>
+				<h2>Ubuntu 14.04 LTS</h2>
+                                <p>The LTS version ships a very old version of OpenSCAD, to update to the latest release add the following
+                                    <a href="https://launchpad.net/~openscad/+archive/ubuntu/releases">PPA</a> before installing OpenSCAD.</p>
+				<pre>
+					<code>$ sudo add-apt-repository ppa:openscad/releases</code>
 				</pre>
 			</div>
 			<div id="fedora" class="subsection">
