Add note that parallel installation is possible.

--- a/downloads.html
+++ b/downloads.html
@@ -357,11 +357,14 @@
                         <div id="snapshots-linux-auto" class="subsection">
                             <h1>Snapshots for specific Linux distributions</h1>
 
-                            <h2>Debian / Ubuntu packages built on <a href="https://build.opensuse.org/">OpenSUSE build service</a></h2>
-                        
                             <p>The packages are automatically built based on the <a href="https://github.com/openscad/openscad/tree/master">master branch</a>
                                 on github.</p>
-                            <p>For those packages, the release key must be added with apt-key to the key-ring to allow
+                            <p>Note: The packages are called "<b>openscad-nightly</b>" so it's possible to install the development
+                                snapshot packages in parallel to the release version from the official repositories.</p>
+
+                            <h2>Debian / Ubuntu packages built on <a href="https://build.opensuse.org/">OpenSUSE build service</a></h2>
+                        
+                            <p>To install the packages, the release key must be added with apt-key to the key-ring to allow
                                 apt-get / aptitude to validate the packages.<br/>
                                 Key ID: 30EB8E08 (valid till 2016-11-28)<br/>
                                 Key UID: home:t-paul OBS Project &lt;home:t-paul@build.opensuse.org&gt;</p>
