Add pointer for Arch Linux.

--- a/downloads.html
+++ b/downloads.html
@@ -418,6 +418,10 @@
                             <h2>Fedora packages built on Copr</h2>
 
                             <p>RPM repository with nightly OpenSCAD development snapshots on <a href="http://copr.fedoraproject.org/coprs/churchyard/openscad-devel/">copr.fedoraproject.org</a>.</p>
+
+                            <h2>Arch Linux</h2>
+                            To install OpenSCAD from git on Arch Linux the <a href="https://aur.archlinux.org/packages/openscad-git/">openscad-git pkgbuild</a>
+                            is available on <a href="https://aur.archlinux.org/">AUR</a>.
                         </div>
 
 		</section>
