Removed stand-alone Linux binaries. Use the packages instead

--- a/downloads.html
+++ b/downloads.html
@@ -336,7 +336,7 @@
 
 			<div id="snapshots-linux" class="subsection">
 				<h2>Linux</h2>
-                                
+<!-- Stand-alone binaries not currently being built
                                 <p>Please try the automatically built snapshots first if you are running a supported distribution 
                                    (see <a href="#snapshots-linux-auto">below</a>).</p>
                                 
@@ -352,11 +352,9 @@
 					<small>x64 (64-bit) - tgz archive -</small><small id="LIN64_SNAPSHOT_SIZE">?? MB</small>
 				</button>
 				</a>
-			</div>
+  -->
 
-                        <div id="snapshots-linux-auto" class="subsection">
-                            <h1>Snapshots for specific Linux distributions</h1>
-
+                        <div id="snapshots-linux" class="subsection">
                             <p>The packages are automatically built based on the <a href="https://github.com/openscad/openscad/tree/master">master branch</a>
                                 on github.</p>
                             <p>Note: The packages are called "<b>openscad-nightly</b>" so it's possible to install the development
