--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <meta property="og:type" content="website" />
         <meta property="og:url" content="http://openscad.org" />
         <meta property="og:image" content="http://openscad.org/assets/img/logo.png" />
+        <meta name="p:domain_verify" content="e7ccfb283cc55dd8e8ce7a4641376553"/>
 	<link href="assets/css/style.css" rel="stylesheet"/>
   
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'/>
