--- a/community.html
+++ b/community.html
@@ -6,7 +6,7 @@
 	<title>OpenSCAD - Community</title>
 
 	<link href="assets/css/style.css" rel="stylesheet">
-  
+        <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
 	<script src="assets/js/jquery-1.9.1.min.js"></script>
@@ -87,6 +87,8 @@
 <li><a href="#mailing-list">Mailing List</a></li>
 <li><a href="#irc">IRC Channel</a></li>
 <li><a href="#forum">Forum</a></li>
+<li><a href="#other">Other</a></li>
+<li><a href="http://twitter.com/openscad"><i class="fa fa-twitter"></i></a><a href="https://plus.google.com/communities/112968258499418200895"><i class="fa fa-google-plus"></i></a></li>
 		</ul>
 	</div>
 	
@@ -140,6 +142,15 @@
 			<h2><a href="http://forum.openscad.org" target="_blank">http://forum.openscad.org</a></h2>
 			<a id="nabblelink" href="http://forum.openscad.org/">OpenSCAD</a>
 			<script src="http://forum.openscad.org/embed/f1"></script>
+		</section>
+
+		<section id="other">
+			<h1>Other</h1>
+                        <p>
+                          <ul>
+                          <il><a href="http://www.thingiverse.com/groups/openscad">OpenSCAD Thingiverse group</a></li>
+                          </ul>
+                        </p>
 		</section>
 
 	</article>
