--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 			<h1><strong><span class="green">Open</span>SCAD</strong> is a software for creating solid 3D CAD objects.</h1>
 			<h1 class="normal">It is free software and available for Linux/UNIX, MS Windows and Mac OS X.</h1>
 
-			<img style="border:1px solid #eee; border-radius:8px; margin:20px 0px 40px 0px;" src="assets/img/screenshot.gif"/>
+			<img src="assets/img/screenshot.png"/>
 
 <!--
 			<div style="width:100px; float:left; margin-left:80px; text-align:center;">
