some minor html sanitation

--- a/news.html
+++ b/news.html
@@ -169,7 +169,6 @@
                       <li><a href="https://github.com/openscad/openscad/wiki/Ideas-for-Development-Tasks#test-framework-improvements">Test Framework Improvements</a></li>
                       <li><a href="https://github.com/openscad/openscad/wiki/Ideas-for-Development-Tasks#larger-tasks-for-particularly-experienced-people">...and more</a></li>
                     </ul>
-                    </p>
 		  </div>
                 </section>
 		<section id="20140930">
@@ -284,7 +283,6 @@
                       <li><a href="https://github.com/openscad/openscad/wiki/Ideas:-GSoC-2014#wiki-web-front-end">Web front-end</a></li>
                       <li><a href="https://github.com/openscad/openscad/wiki/Ideas:-GSoC-2014#wiki-larger-tasks-for-particularly-experienced-people">Larger tasks for particularly experienced people</a></li>
                     </ul>
-                    </p>
 		  </div>
                 </section>
 		<section id="20130618">
@@ -311,7 +309,7 @@
                     <ul>
                       <li>linear_extrude now takes a scale parameter:<br/>
                         <code>linear_extrude(height=a, slices=b, twist=c, scale=[x,y])</code></li>
-                      <li>Recursive use of modules is now supported (including cascading child() operations), see <a href="https://github.com/openscad/openscad/blob/master/examples/example024.scad">example024</a></br></li>
+                      <li>Recursive use of modules is now supported (including cascading child() operations), see <a href="https://github.com/openscad/openscad/blob/master/examples/example024.scad">example024</a><br/></li>
                       <li>Parameter list values can now depend on earlier values: <code>for (i=[0:2], j=[0:i])</code></li>
                       <li>value assignments in parameters can now depend on already declared parameters</li>
                       <li>Added <a href="http://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Transformations#resize">resize()</a> module</li>
@@ -322,7 +320,7 @@
                       <li>There is now a <a href="http://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Libraries#Library_Locations">built-in library path</a> in user-space</li>
                       <li>Commandline output to PNG, with various camera and rendering settings.<br/>        
                         Run <code>openscad -h</code> to see usage info or see the <a href="http://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Using_OpenSCAD_in_a_command_line_environment">user manual</a></li>
-                      <li>Attempting to open or drag&drop dxf, off or stl files in the GUI will now create an import statement.</li>
+                      <li>Attempting to open or drag&amp;drop dxf, off or stl files in the GUI will now create an import statement.</li>
                       <li>The preview operator (%) will now preserve any manually set color</li>
                       <li>The highlight operator (#) will now color the object in transparent red</li>
                       <li>Mac: Added document icon</li>
@@ -351,7 +349,7 @@
                     <ul>
                       <li>Build scripts have been further improved</li>
                       <li>Regression test now creates single monolithic .html file for easier uploading</li>
-                      <li>Regression test auto-starts & stops Xvfb / Xvnc if on headless unix machine</li>
+                      <li>Regression test auto-starts &amp; stops Xvfb / Xvnc if on headless unix machine</li>
                       <li>The backend is finally independent of Qt</li>
                       <li>Windows: We now have a 64-bit version</li>
                     </ul>
