PPA works for other distros than Ubuntu 14.04

--- a/downloads.html
+++ b/downloads.html
@@ -183,9 +183,8 @@
 				<pre>
 					<code>$ sudo apt-get install openscad</code>
 				</pre>
-				<h2>Ubuntu 14.04 LTS</h2>
-                                <p>The LTS version ships a very old version of OpenSCAD, to update to the latest release add the following
-                                    <a href="https://launchpad.net/~openscad/+archive/ubuntu/releases">PPA</a> before installing OpenSCAD.</p>
+                                <p>However, some distributions come with old versions of OpenSCAD. To update to the latest release add the following
+                                    <a href="https://launchpad.net/~openscad/+archive/ubuntu/releases">PPA</a> before installing OpenSCAD:</p>
 				<pre>
 					<code>$ sudo add-apt-repository ppa:openscad/releases</code>
 				</pre>
