Add links to Debian 8 and Ubuntu 15.04 nightly builds.

--- a/downloads.html
+++ b/downloads.html
@@ -376,19 +376,28 @@
                                 file <b>/etc/apt/sources.list.d/openscad.list</b> with the URL specific to the distribution.
 
                             <h3>Debian 7 (Wheezy)</h3>
-
                             <pre>
                                 <small><code>deb http://download.opensuse.org/repositories/home:/t-paul/Debian_7.0/ ./</code></small>
                             </pre>
-                            <h3>Ubuntu 14.04 LTS</h3>
 
+                            <h3>Debian 8 (Jessie)</h3>
+                            <pre>
+                                <small><code>deb http://download.opensuse.org/repositories/home:/t-paul/Debian_8.0/ ./</code></small>
+                            </pre>
+
+                            <h3>Ubuntu 14.04 LTS</h3>
                             <pre>
                                 <small><code>deb http://download.opensuse.org/repositories/home:/t-paul/xUbuntu_14.04/ ./</code></small>
                             </pre>
 
-                            <h3>Ubuntu 14.10 / Debian 8 (Jessie) - not yet released, currently also called "testing"</h3>
+                            <h3>Ubuntu 14.10</h3>
                             <pre>
                                 <small><code>deb http://download.opensuse.org/repositories/home:/t-paul/xUbuntu_14.10/ ./</code></small>
+                            </pre>
+
+                            <h3>Ubuntu 15.04</h3>
+                            <pre>
+                                <small><code>deb http://download.opensuse.org/repositories/home:/t-paul/xUbuntu_15.04/ ./</code></small>
                             </pre>
 
                             <h2>openSUSE packages built on <a href="https://build.opensuse.org/">OpenSUSE build service</a></h2>
