Sync manual chapters

--- a/documentation.html
+++ b/documentation.html
@@ -100,8 +100,11 @@
 				<li><a href="http://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Using_the_2D_Subsystem" target="_blank" title="OpenSCAD User Manual/Using the 2D Subsystem">Using the 2D Subsystem</a></li>
 				<li><a href="http://en.wikibooks.org/wiki/OpenSCAD_User_Manual/STL_Import_and_Export" target="_blank" title="OpenSCAD User Manual/STL Import and Export">STL Import and Export</a></li>
 				<li><a href="http://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Commented_Example_Projects" target="_blank" title="OpenSCAD User Manual/Commented Example Projects">Commented Example Projects</a></li>
+				<li><a href="http://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Using_an_external_Editor_with_OpenSCAD" target="_blank" title="Using an external Editor with OpenSCAD">Using an external Editor with OpenSCAD</a></li>
 				<li><a href="http://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Using_OpenSCAD_in_a_command_line_environment" target="_blank" title="OpenSCAD User Manual/Using OpenSCAD in a command line environment">Using OpenSCAD in a command line environment</a></li>
 				<li><a href="http://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Building_OpenSCAD_from_Sources" target="_blank" title="OpenSCAD User Manual/Building OpenSCAD from Sources">Building OpenSCAD from Sources</a></li>
+				<li><a href="http://en.wikibooks.org/wiki/OpenSCAD_User_Manual/FAQ" target="_blank" title="FAQ">FAQ</a></li>
+				<li><a href="http://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Libraries" target="_blank" title="Libraries">Libraries</a></li>
 				<li><a href="http://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Command_Glossary" target="_blank" title="OpenSCAD User Manual/Command Glossary">Glossary</a></li>
 			</ol>
 			
